Fix the two lines in side menu
In some cases the width of side menu is too short and make anchor with two lines, the anchor is previously stylized with line-height: 48px.

--- a/static/site.css
+++ b/static/site.css
@@ -34,3 +34,9 @@ header, main, footer {
     overflow-x: auto;
     -ms-overflow-style: -ms-autohiding-scrollbar; // See https://github.com/twbs/bootstrap/pull/10057
 }
+
+.side-nav a {
+    display: flex;
+    align-items: center;
+    line-height: 1.3;
+}
